@@ -1,0 +1,5 @@
+#! /usr/bin/dh-exec
+
+usr/share/doc/libglobus-gram-client/html => usr/share/doc/libglobus-gram-client-doc/html
+usr/share/man/man3/GLOBUS*
+usr/share/man/man3/globus*
