@@ -1,0 +1,3 @@
+#! /usr/bin/dh-exec
+usr/lib/*/libglobus*.so.*
+usr/share/doc/libglobus-gram-client/GLOBUS_LICENSE => usr/share/doc/libglobus-gram-client3/GLOBUS_LICENSE
