@@ -1,3 +1,9 @@
+globus-gram-client (13.17-1+gt6.@distro@) @distro@; urgency=low
+
+  * Fix tests makefile when openssl not present
+
+ -- Globus Toolkit <support@globus.org>  Thu, 22 Jun 2017 11:21:16 -0400
+
 globus-gram-client (13.16-1+gt6.@distro@) @distro@; urgency=low
 
   * Update for el.5 openssl101e
